# qr-cxx-android

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/com/vaca/qr_cxx_android/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  QrTask.cpp  QrTask.h  native-lib.cpp
app/src/main/cpp/core/src/qrcode/: QRDetector.cpp  QRDetector.h  QRReader.cpp  QRReader.h
app/src/main/cpp/fec/: fec.cpp  galois_table.c
app/src/main/java/com/vaca/qr_cxx_android/: ConvertUtils.kt  MainActivity.kt  MainApplication.kt  PathUtil.java
app/src/main/res/drawable-v24/: shape_progress_round.xml  shape_progressbar_bg.xml  shape_progressbar_progress.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/vaca/qr_cxx_android/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
key/: vaca.jks
